--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,20 @@ services:
     networks:
       - docker-laboratory
 
+  api:
+    image: biojj/laboratory-deploy
+    container_name: laboratory-deploy
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DATABASE}
+    ports:
+      - 3000:3000
+    networks:
+      - docker-laboratory
+    depends_on:
+      - postgres_db
+
 networks:
   docker-laboratory:
     driver: bridge
